--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
            <form id="top" action="#" method="post">
            <p><input type="text" name="input1"></p>
            <p><input type="submit" value="送信">
-           <input type="reset2 value="取り消し"></p>
+           <input type="reset" value="取り消し"></p>
            </form>
+  
            <p>好きなカレーは
             <input type="redio" name="input11" value="beef" checked>ビーフカレー
             <input type="redio" name="input11" value="seefood">シーフードカレー
