--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li>米</li>
    </ul>
    <dl>
-       <dt>牛バラ肉</dl><dd>500g</dd>
+       <dt>牛バラ肉</dt><dd>500g</dd>
        <dt>ニンジン</dt><dd>1本</dd>
        <dt>玉ねぎ</dt><dd>3個</dd>
        <dt>ジャガイモ</dt><dd>3個</dd>
@@ -54,9 +54,9 @@
            </form>
   
            <p>好きなカレーは
-            <input type="redio" name="input11" value="beef" checked>ビーフカレー
-            <input type="redio" name="input11" value="seefood">シーフードカレー
-             <input type="redio" name="input11" value="chicken">チキンカレー
+            <input type="radio" name="input11" value="beef" checked>ビーフカレー
+            <input type="radio" name="input11" value="seefood">シーフードカレー
+             <input type="radio" name="input11" value="chicken">チキンカレー
              </p>
               <p>好きなカレーは
             <input type="checkbox" name="input11" value="beef" checked>ビーフカレー
