--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
            <p><input type="text" name="input1"></p>
            <p><input type="submit" value="送信">
            <input type="reset" value="取り消し"></p>
-           </form>
   
            <p>好きなカレーは
             <input type="radio" name="input11" value="beef" checked>ビーフカレー
@@ -69,3 +68,6 @@
                <option value="seefood">シーフードカレー
                 <option value="chicken">チキンカレー
                 </select></p>
+</form>
+  </body>
+ </html>
